update page title - change landing.css to src/landing.css - change background url

--- a/views/src/landing.css
+++ b/views/src/landing.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url(media/BACK.jpg);
+    background-image: url(https://j.top4top.io/p_2504s68fp1.jpg);
     background-size: cover;
     background-position-y: 60px;
 }
