--- a/views/landing.html
+++ b/views/landing.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="landing.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="src/landing.css">
+    <title>Shortly</title>
 </head>
 
 <body>
