--- a/views/landing.html
+++ b/views/landing.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <nav>
-            <a href="#" class="logo">SHORTLY</a>
+            <a href="" class="logo">SHORTLY</a>
             <ul>
-                <li><a href="#">Team</a></li>
-                <li><a href="">Try Now</a></li>
+                <li><a href="">Team</a></li>
+                <li><a href="LCR.html">Try Now</a></li>
             </ul>
         </nav>
     </div>
