add Link Creation page JS - add LCR.js - add '/try' route in server.js - change form to div in LCR.html - add style changes in LCR.css

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -8,11 +8,12 @@
 </head>
 
 <body>
+    
     <div class="container">
         <nav>
             <a href="#" class="logo">SHORTLY</a>
             <ul>
-                <li><a href="landing.html">Home Page</a></li>
+                <li><a href="/">Home Page</a></li>
                 <li><a href="#">Team</a></li>
             </ul>
         </nav>
@@ -21,10 +22,11 @@
         <h1>Insert Your Link</h1>
     </div>
 
-    <form class="form">
+    <div class="create_div">
         <input type="text" class="text-box">
-        <input type="submit" value="Create" class="button">
-    </form>
+        <button class="create_button">Create</button> 
+    </div>
+    <script src="src/LCR.js"></script>
 </body>
 
 </html>
