change href to /try

--- a/views/landing.html
+++ b/views/landing.html
@@ -13,7 +13,7 @@
             <a href="" class="logo">SHORTLY</a>
             <ul>
                 <li><a href="">Team</a></li>
-                <li><a href="LCR.html">Try Now</a></li>
+                <li><a href="/try">Try Now</a></li>
             </ul>
         </nav>
     </div>
