shortened link box

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    
+
     <div class="container">
         <nav>
             <a href="#" class="logo">SHORTLY</a>
@@ -24,8 +24,11 @@
 
     <div class="create_div">
         <input type="text" class="text-box">
-        <button class="create_button">Create</button> 
+        <button class="create_button">Create</button>
+        <br>
+        <h1 class="link"> https://discord.com</h1>
     </div>
+
     <script src="src/LCR.js"></script>
 </body>
 
