add link creation handling - change h1 to a in LRC.html - add 200 status xhr response handling

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -26,7 +26,7 @@
         <input type="text" class="text-box">
         <button class="create_button">Create</button>
         <br>
-        <h1 class="link"> https://discord.com</h1>
+        <a class="link"></a>
     </div>
 
     <script src="src/LCR.js"></script>
