add '/team' view route - fix hrefs

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -11,10 +11,10 @@
 
     <div class="container">
         <nav>
-            <a href="#" class="logo">SHORTLY</a>
+            <a href="/" class="logo">SHORTLY</a>
             <ul>
                 <li><a href="/">Home Page</a></li>
-                <li><a href="#">Team</a></li>
+                <li><a href="/team">Team</a></li>
             </ul>
         </nav>
     </div>
