--- a/views/landing.html
+++ b/views/landing.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <nav>
-            <a href="" class="logo">SHORTLY</a>
+            <a href="/" class="logo">SHORTLY</a>
             <ul>
-                <li><a href="">Team</a></li>
+                <li><a href="/team">Team</a></li>
                 <li><a href="/try">Try Now</a></li>
             </ul>
         </nav>
