CSS Visual Enhancement

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="src/LCR.css">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/LCR.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Shortly</title>
-</head>
+  </head>
 
-<body>
-
+  <!-- Header -->
+  <body>
     <div class="container">
-        <nav>
-            <a href="/" class="logo">SHORTLY</a>
-            <ul>
-                <li><a href="/">Home Page</a></li>
-                <li><a href="/team">Team</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <a href="/" class="logo">SHORTLY</a>
+        <ul>
+          <li><a href="/">Home Page</a></li>
+          <li><a href="/team">Team</a></li>
+        </ul>
+      </nav>
     </div>
     <div class="content">
-        <h1>Insert Your Link</h1>
+      <h1>Insert Your Link</h1>
     </div>
 
+    <!-- Content Section -->
     <div class="create_div">
-        <input type="text" class="text-box">
-        <button class="create_button">Create</button>
-        <br>
-        <a class="link" target="_blank"></a>
+      <input type="text" placeholder=" Place your link here" class="text-box" />
+      <button class="create_button">Create</button>
+      <br />
+      <a class="link" target="_blank"></a>
     </div>
 
     <script src="src/LCR.js"></script>
-</body>
-
+  </body>
 </html>
