--- a/views/team.html
+++ b/views/team.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="src/team.css">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/team.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Shortly</title>
-</head>
+  </head>
 
-<body>
+  <!-- Header -->
+  <body>
     <div class="container">
-        <nav>
-            <a href="/" class="logo">SHORTLY</a>
-            <ul>
-                <li><a href="/">Home Page</a></li>
-                <li><a href="/try">Try Now</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <a href="/" class="logo">SHORTLY</a>
+        <ul>
+          <li><a href="/">Home Page</a></li>
+          <li><a href="/try">Try Now</a></li>
+        </ul>
+      </nav>
     </div>
 
-    <div class="row">
-        <div class="column">
-            <a href="https://github.com/AdamMindGate">AdamMindGate</a>
-            <img src="https://avatars.githubusercontent.com/u/78859273?v=4" alt="Forest" style="width:80%">
-        </div>
-        <div class="column">
-            <a href="https://github.com/AbdoRayan404">AbdoRayan404</a>
-            <img src="https://avatars.githubusercontent.com/u/44875260?v=4" alt="Mountains" style="width:80%">
-        </div>
-    </div> 
-    
-</body>
+    <!-- Content Section -->
+    <div class="content-container">
+      <div class="IMG-ONE">
+        <a href="https://github.com/AdamMindGate" target="_blank"
+          ><img
+            src="https://avatars.githubusercontent.com/u/78859273?v=4"
+            alt="AdamMindGate"
+            style="width: 70.4%"
+            class="img_first"
+          />
+        </a>
+        <p>AdamMindGate</p>
+      </div>
+      <!-- / -->
+      <div class="IMG-TWO">
+        <a href="https://github.com/AbdoRayan404" target="_blank"
+          ><img
+            src="https://avatars.githubusercontent.com/u/44875260?v=4"
+            alt="AbdoRayan404"
+            style="width: 80%"
+          />
+        </a>
+        <p>AbdoRayan404</p>
+      </div>
+    </div>
 
+    <!-- #-# -->
+  </body>
 </html>
