--- a/views/landing.html
+++ b/views/landing.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/landing.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="src/landing.css">
     <title>Shortly</title>
-</head>
+  </head>
 
-<body>
+  <!-- Header -->
+  <body>
     <div class="container">
-        <nav>
-            <a href="/" class="logo">SHORTLY</a>
-            <ul>
-                <li><a href="/team">Team</a></li>
-                <li><a href="/try">Try Now</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <a href="/" class="logo">SHORTLY</a>
+        <ul>
+          <li><a href="/team">Team</a></li>
+          <li><a href="/try">Try Now</a></li>
+        </ul>
+      </nav>
     </div>
-    <div class="content">
-        <h1>SHORTLY</h1>
-        <h4>No-Login link shortener website, Simple clicks to make a shortened link. </h4>
-    </div>
-</body>
 
+    <!-- Content Section -->
+    <div class="content">
+      <h1>SHORTLY</h1>
+      <h4>
+        No-Login link shortener website, Simple clicks to make a shortened link.
+      </h4>
+    </div>
+  </body>
 </html>
