--- a/views/src/team.css
+++ b/views/src/team.css
@@ -1,17 +1,15 @@
 * {
     padding: 0%;
-    margin: 0px;
+    margin: 0%;
     box-sizing: border-box;
-
+    font-family: 'Oswald', sans-serif;
 }
 
 body {
-    background-image:  url(https://j.top4top.io/p_2504s68fp1.jpg);
+    background-image: url(https://j.top4top.io/p_2504s68fp1.jpg);
     background-size: cover;
     background-position-y: 60px;
 }
-
-
 
 nav {
     background-color: #c03828;
@@ -30,6 +28,8 @@ nav {
     text-transform: uppercase;
     padding-left: 40px;
     font-size: 40px;
+    font-weight: 900;
+
 }
 
 nav ul li {
@@ -44,30 +44,47 @@ li a {
     font-size: 30px;
 }
 
-.content h1 {
-    margin-top: 150px;
-    text-align: center;
-    font-size: 80px;
-    color: #c03828;
+.content-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.content h4 {
-    text-align: center;
-    font-size: 40px;
-    color: #c03828;
-}
-
-.column {
-    float: left;
-    width: 40%;
-    margin-left: 65px;
-    margin-right: 30px;
-    padding: 30px;
-}
-
-.column a {
-    text-decoration: none;
-    font-weight: bold;
+div .IMG-ONE,
+.IMG-TWO,
+p {
     color: white;
-    font-size: 28px;
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 10px;
+    text-align: center;
+}
+
+img {
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+}
+
+.IMG-ONE a {
+    background-image: linear-gradient(purple, purple);
+    background-size: 1%;
+
+    transition: 0.5s;
+}
+
+.IMG-ONE a:hover {
+    background-image: linear-gradient(green, green);
+    background-size: 1%;
+}
+
+
+.IMG-TWO a {
+    background-image: linear-gradient(purple, purple);
+    background-size: 1%;
+
+    transition: 0.5s;
+}
+
+.IMG-TWO a:hover {
+    background-image: linear-gradient(green, green);
+    background-size: 1%;
 }
