--- a/views/src/landing.css
+++ b/views/src/landing.css
@@ -6,26 +6,28 @@
 }
 
 body {
-    background-image: url(https://j.top4top.io/p_2504s68fp1.jpg);
+    background-color: #FFFFFF;
     background-size: cover;
     background-position-y: 60px;
 }
 
 
 nav {
-    background-color: #c03828;
+    background-color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     top: 0%;
     width: 100%;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+
 }
 
 .logo {
     text-decoration: none;
-    color: #1e2d42;
+    color: #2A9D8F;
     text-transform: uppercase;
     padding-left: 40px;
     font-size: 40px;
@@ -39,20 +41,35 @@ nav ul li {
 
 li a {
     text-decoration: none;
-    color: #1e2d42;
-    padding-right: 80px;
-    font-size: 30px;
+    color: #2A9D8F;
+    padding-right: 50px;
+    font-size: 32px;
 }
 
-.content h1 {
+.content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content .text h1 {
     margin-top: 150px;
-    text-align: center;
     font-size: 80px;
-    color: #c03828;
+    color: #2A9D8F;
 }
 
-.content h4 {
-    text-align: center;
+.content .text h4 {
     font-size: 40px;
-    color: #c03828;
+    color: #2A9D8F;
+    width: 500px;
+}
+
+.content .text {
+    margin-left: 120px;
+}
+
+
+.content .image {
+    margin-top: 150px;
+    margin-right: 200px;
 }
