type error fixed

--- a/views/reg.html
+++ b/views/reg.html
@@ -55,7 +55,7 @@
         <input type="checkbox" required />Accept the terms.
         <button type="submit" class="submit-button">Sign-Up</button>
         <button type="submit" class="submit-button">
-          Alread have an account? Sign-In
+          Already have an account? Sign-In
         </button>
       </form>
     </div>
