add register, login view routes - fix: type error in landing.html - fix: href links of register & login a tags

--- a/views/landing.html
+++ b/views/landing.html
@@ -20,8 +20,8 @@
         <a href="/" class="logo">SHORTLY</a>
         <ul>
           <li><a href="/team">Team</a></li>
-          <li><a href="/try">Register</a></li>
-          <li><a href="/try">Loign</a></li>
+          <li><a href="/register">Register</a></li>
+          <li><a href="/login">Login</a></li>
         </ul>
       </nav>
     </div>
