refactor: link creation page

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -18,7 +18,7 @@
       <nav>
         <a href="/" class="logo">SHORTLY</a>
         <ul>
-          <li><a href="/">Home Page</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/team">Team</a></li>
         </ul>
       </nav>
