refactor: team page

--- a/views/team.html
+++ b/views/team.html
@@ -6,6 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
@@ -18,15 +22,28 @@
       <nav>
         <a href="/" class="logo">SHORTLY</a>
         <ul>
-          <li><a href="/">Home Page</a></li>
-          <li><a href="/try">Try Now</a></li>
+          <li><a href="/">Go back to Home</a></li>
         </ul>
       </nav>
     </div>
 
     <!-- Content Section -->
     <div class="content-container">
+      <!-- 1 -->
       <div class="IMG-ONE">
+        <!-- / -->
+        <a href="https://github.com/AbdoRayan404" target="_blank"
+          ><img
+            src="https://avatars.githubusercontent.com/u/44875260?v=4"
+            alt="AbdoRayan404"
+            style="width: 80%"
+          />
+        </a>
+        <p>AbdoRayan404</p>
+        <p>Back-end Developer</p>
+      </div>
+      <!-- 2 -->
+      <div class="IMG-TWO">
         <a href="https://github.com/AdamMindGate" target="_blank"
           ><img
             src="https://avatars.githubusercontent.com/u/78859273?v=4"
@@ -36,18 +53,25 @@
           />
         </a>
         <p>AdamMindGate</p>
+        <p>Front-end Developer</p>
       </div>
-      <!-- / -->
-      <div class="IMG-TWO">
-        <a href="https://github.com/AbdoRayan404" target="_blank"
+      <!-- 3 -->
+      <div class="IMG-THREE">
+        <a href="https://www.artstation.com/belal-abdalnaser" target="_blank"
           ><img
-            src="https://avatars.githubusercontent.com/u/44875260?v=4"
-            alt="AbdoRayan404"
-            style="width: 80%"
+            src="https://cdnb.artstation.com/p/users/avatars/002/102/861/large/b8727981d1f6171cd9e8b025ae075e62.jpg?1593427002"
+            alt="Belal"
           />
         </a>
-        <p>AbdoRayan404</p>
+        <p>Belal Abdelnaser</p>
+        <p>Graphic Designer</p>
       </div>
+    </div>
+    <div class="social-content">
+      <a href="https://github.com/AbdoRayan404/Shortly" target="_blank">
+        <p>Joins Us</p>
+        <div class="fa fa-github" style="font-size: 50px"></div>
+      </a>
     </div>
 
     <!-- #-# -->
