--- a/views/src/team.css
+++ b/views/src/team.css
@@ -5,31 +5,34 @@
     font-family: 'Oswald', sans-serif;
 }
 
+
 body {
-    background-image: url(https://j.top4top.io/p_2504s68fp1.jpg);
+    background-color: #FFFFFF;
     background-size: cover;
     background-position-y: 60px;
 }
 
+
 nav {
-    background-color: #c03828;
+    background-color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     top: 0%;
     width: 100%;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+
 }
 
 .logo {
     text-decoration: none;
-    color: #1e2d42;
+    color: #2A9D8F;
     text-transform: uppercase;
     padding-left: 40px;
     font-size: 40px;
     font-weight: 900;
-
 }
 
 nav ul li {
@@ -39,9 +42,9 @@ nav ul li {
 
 li a {
     text-decoration: none;
-    color: #1e2d42;
-    padding-right: 80px;
-    font-size: 30px;
+    color: #2A9D8F;
+    padding-right: 50px;
+    font-size: 32px;
 }
 
 .content-container {
@@ -52,23 +55,26 @@ li a {
 
 div .IMG-ONE,
 .IMG-TWO,
+.IMG-THREE,
 p {
-    color: white;
+    color: black;
     font-size: 20px;
     font-weight: 500;
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: center;
 }
 
 img {
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+
 }
 
-.IMG-ONE a {
+.content-container a {
     background-image: linear-gradient(purple, purple);
     background-size: 1%;
 
     transition: 0.5s;
+
 }
 
 .IMG-ONE a:hover {
@@ -76,15 +82,30 @@ img {
     background-size: 1%;
 }
 
-
-.IMG-TWO a {
-    background-image: linear-gradient(purple, purple);
-    background-size: 1%;
-
-    transition: 0.5s;
-}
-
 .IMG-TWO a:hover {
     background-image: linear-gradient(green, green);
     background-size: 1%;
+}
+
+.IMG-THREE {
+    width: 404.99px;
+}
+
+.IMG-THREE img {
+    width: calc(158%/2);
+}
+
+.IMG-THREE a:hover {
+    background-image: linear-gradient(green, green);
+    background-size: 1%;
+}
+
+.social-content {
+    margin: 33px 0px;
+    text-align: center;
+
+}
+
+.social-content div {
+    color: black;
 }
