feat: add sign-in & sign-up buttons fix: remove try now fix: change Home Page to Home

--- a/views/login.html
+++ b/views/login.html
@@ -19,8 +19,7 @@
       <nav>
         <a href="/" class="logo">SHORTLY</a>
         <ul>
-          <li><a href="/">Home Page</a></li>
-          <li><a href="/try">Try Now</a></li>
+          <li><a href="/">Home</a></li>
         </ul>
       </nav>
     </div>
@@ -46,9 +45,7 @@
           required
         />
         <button type="submit" class="submit-button">Sign-In</button>
-        <button type="submit" class="submit-button">
-          Dont have account yet? Sign-Up.
-        </button>
+        <div onclick="location.href='/register'" class="link-button">Dont have account yet? Sign-Up</div>
       </form>
     </div>
   </body>
