--- a/views/reg.html
+++ b/views/reg.html
@@ -19,8 +19,7 @@
       <nav>
         <a href="/" class="logo">SHORTLY</a>
         <ul>
-          <li><a href="/">Home Page</a></li>
-          <li><a href="/try">Try Now</a></li>
+          <li><a href="/">Home</a></li>
         </ul>
       </nav>
     </div>
@@ -54,9 +53,7 @@
         />
         <input type="checkbox" required />Accept the terms.
         <button type="submit" class="submit-button">Sign-Up</button>
-        <button type="submit" class="submit-button">
-          Already have an account? Sign-In
-        </button>
+        <div onclick="location.href='/login'" class="link-button">Already have an account? Sign-In</div>
       </form>
     </div>
   </body>
