--- a/views/src/login.css
+++ b/views/src/login.css
@@ -104,3 +104,17 @@ li a {
   background: white;
   padding-left: 10px;
 }
+
+.link-button {
+  border: 1px solid black;
+  background-color: #FCFCFC;
+  align-items: center;
+  text-align: center;
+  padding: 10px 30px;
+  border-radius: 30px;
+  margin: 30px auto;
+  cursor: pointer;
+  width: 85%;
+  font-size: small;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+}
