--- a/views/src/reg.css
+++ b/views/src/reg.css
@@ -90,6 +90,7 @@ li a {
 
 .submit-button {
   display: block;
+  background-color: #FCFCFC;
   padding: 10px 30px;
   border-radius: 30px;
   margin: 30px auto;
@@ -101,4 +102,18 @@ li a {
   border-radius: 10px;
   background: white;
   padding-left: 10px;
+}
+
+.link-button {
+  border: 1px solid black;
+  background-color: #FCFCFC;
+  align-items: center;
+  text-align: center;
+  padding: 10px 30px;
+  border-radius: 30px;
+  margin: 30px auto;
+  cursor: pointer;
+  width: 85%;
+  font-size: small;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
 }
