--- a/views/login.html
+++ b/views/login.html
@@ -30,23 +30,28 @@
       <!-- form header -->
       <h1>Log-In</h1>
       <!-- form elements group container -->
-      <form class="input-group">
+      <form class="input-group" action="javascript:login();">
         <input
           type="email"
           class="input-field"
+          id="email-input"
           placeholder="example@gmail.com"
         />
         <input
           type="password"
           class="input-field"
+          id="password-input"
           pattern=".{8,}"
           title="Please write 8 characters password"
           placeholder="Write a strong password"
           required
         />
         <button type="submit" class="submit-button">Sign-In</button>
+        <p id="response-message"></p>
         <div onclick="location.href='/register'" class="link-button">Dont have account yet? Sign-Up</div>
       </form>
+
+      <script src="src/login.js"></script>
     </div>
   </body>
 </html>
