--- a/views/reg.html
+++ b/views/reg.html
@@ -29,15 +29,17 @@
       <!-- form header -->
       <h1>Register</h1>
       <!-- form elements group container -->
-      <form class="input-group">
+      <form class="input-group" action="javascript:register();">
         <input
           type="email"
           class="input-field"
+          id="email-input"
           placeholder="example@gmail.com"
         />
         <input
           type="password"
           class="input-field"
+          id="password-input"
           pattern=".{8,}"
           title="Please write 8 characters password"
           placeholder="Write a strong password"
@@ -46,6 +48,7 @@
         <input
           type="password"
           class="input-field"
+          id="password-repeat-input"
           pattern=".{8,}"
           title="Please write 8 characters password"
           placeholder="Rewrite your password"
@@ -53,8 +56,11 @@
         />
         <input type="checkbox" required />Accept the terms.
         <button type="submit" class="submit-button">Sign-Up</button>
+        <p id="response-message"></p>
         <div onclick="location.href='/login'" class="link-button">Already have an account? Sign-In</div>
       </form>
+
+      <script src="src/reg.js"></script>
     </div>
   </body>
 </html>
