feat: landing page authentication feat: redirect on login page

--- a/views/landing.html
+++ b/views/landing.html
@@ -18,10 +18,10 @@
     <div class="container">
       <nav>
         <a href="/" class="logo">SHORTLY</a>
-        <ul>
+        <ul id="navbar">
           <li><a href="/team">Team</a></li>
-          <li><a href="/register">Register</a></li>
-          <li><a href="/login">Login</a></li>
+          <li id="register-navbar"><a href="/register">Register</a></li>
+          <li id="login-navbar"><a href="/login">Login</a></li>
         </ul>
       </nav>
     </div>
@@ -38,5 +38,7 @@
       <div class="image">
       </div>
     </div>
+
+    <script src="src/landing.js"></script>
   </body>
 </html>
