feat: add contact us feat: add illustration feat: add try now button

--- a/views/landing.html
+++ b/views/landing.html
@@ -31,14 +31,46 @@
       <div class="text">
         <h1>SHORTLY</h1>
         <h4>
-          No-Login link shortener website, Simple clicks to make a shortened
-          link.
+          Fast and Easy link shortener website with the ability of analysing and
+          managing your links. Just a simple clicks to make a shortened link.
         </h4>
+        <button>Try now</button>
       </div>
       <div class="image">
+        <img
+          src="https://cdn.discordapp.com/attachments/1045066964328005683/1047244323021934602/final_project_without_background.png"
+          alt="Illustration.png"
+        />
       </div>
     </div>
 
+    <div class="content-two">
+      <div class="contact-us">
+        <h1>Contact Us</h1>
+        <form action="">
+          <div>
+            <input type="text" placeholder="Name" required />
+          </div>
+          <div>
+            <input type="email" placeholder="Email" />
+          </div>
+          <div class="comment">
+            <textarea
+              id="subject"
+              name="subject"
+              required
+              placeholder="Leave a Feedback or a Comment here.."
+            ></textarea>
+          </div>
+          <button>Submit</button>
+        </form>
+      </div>
+    </div>
+    <div class="team-symbol" style="text-align: center">
+      <a href="https://github.com/AbdoRayan404/Shortly" target="_blank"
+        >Shortly™</a
+      >
+    </div>
     <script src="src/landing.js"></script>
   </body>
 </html>
