fix try now button & contact button - add link redirector to try now button - change contact us button type into submit

--- a/views/landing.html
+++ b/views/landing.html
@@ -34,7 +34,7 @@
           Fast and Easy link shortener website with the ability of analysing and
           managing your links. Just a simple clicks to make a shortened link.
         </h4>
-        <button>Try now</button>
+        <a href="reg.html"><p>Try now</p> </a>
       </div>
       <div class="image">
         <img
@@ -62,7 +62,7 @@
               placeholder="Leave a Feedback or a Comment here.."
             ></textarea>
           </div>
-          <button>Submit</button>
+          <button type="submit">Submit</button>
         </form>
       </div>
     </div>
