--- a/views/landing.html
+++ b/views/landing.html
@@ -34,7 +34,7 @@
           Fast and Easy link shortener website with the ability of analysing and
           managing your links. Just a simple clicks to make a shortened link.
         </h4>
-        <a href="reg.html"><p>Try now</p> </a>
+        <a href="/register"><p>Try now</p> </a>
       </div>
       <div class="image">
         <img
