link creation page update - fix: shortned link position - update: shortned links new style - feat : monitoring link added

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -22,19 +22,50 @@
           <li><a href="/team">Team</a></li>
         </ul>
       </nav>
+
+      <!-- Content Section -->
     </div>
     <div class="content">
-      <h1>Insert Your Link</h1>
+      <h1>Create your link</h1>
     </div>
-
-    <!-- Content Section -->
+    <!-- link creation section -->
     <div class="create_div">
-      <input type="text" placeholder=" Place your link here" class="text-box" />
-      <button class="create_button">Create</button>
-      <br />
-      <a class="link" target="_blank"></a>
+      <div class="input-links">
+        <input
+          type="text"
+          placeholder=" Place your link here"
+          class="text-box"
+        />
+        <button class="create_button">Create</button>
+      </div>
+      <div class="links-group">
+        <div class="links-container">
+          <a class="original-link" target="_blank">https//google.com</a>
+          <a class="shortned-link" target="_blank">https//shrtly.com</a>
+          <a href="" class="monitor">Monitor</a>
+        </div>
+        <hr />
+        <div class="links-container">
+          <a class="original-link" target="_blank">https//google.com</a>
+          <a class="shortned-link" target="_blank">https//shrtly.com</a>
+          <a href="" class="monitor">Monitor</a>
+        </div>
+        <hr />
+        <div class="links-container">
+          <a class="original-link" target="_blank">https//google.com</a>
+          <a class="shortned-link" target="_blank">https//shrtly.com</a>
+          <a href="" class="monitor">Monitor</a>
+        </div>
+        <hr />
+        <div class="links-container">
+          <a class="original-link" target="_blank">https//google.com</a>
+          <a class="shortned-link" target="_blank">https//shrtly.com</a>
+          <a href="" class="monitor">Monitor</a>
+        </div>
+        <hr />
+      </div>
     </div>
 
-    <script src="src/LCR.js"></script>
+      <script src="src/LCR.js"></script>
   </body>
 </html>
