remove: test link containers change: monitor tag -> monitor-button

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -38,34 +38,9 @@
         />
         <button class="create_button">Create</button>
       </div>
-      <div class="links-group">
-        <div class="links-container">
-          <a class="original-link" target="_blank">https//google.com</a>
-          <a class="shortned-link" target="_blank">https//shrtly.com</a>
-          <a href="" class="monitor">Monitor</a>
-        </div>
-        <hr />
-        <div class="links-container">
-          <a class="original-link" target="_blank">https//google.com</a>
-          <a class="shortned-link" target="_blank">https//shrtly.com</a>
-          <a href="" class="monitor">Monitor</a>
-        </div>
-        <hr />
-        <div class="links-container">
-          <a class="original-link" target="_blank">https//google.com</a>
-          <a class="shortned-link" target="_blank">https//shrtly.com</a>
-          <a href="" class="monitor">Monitor</a>
-        </div>
-        <hr />
-        <div class="links-container">
-          <a class="original-link" target="_blank">https//google.com</a>
-          <a class="shortned-link" target="_blank">https//shrtly.com</a>
-          <a href="" class="monitor">Monitor</a>
-        </div>
-        <hr />
-      </div>
+      <div class="links-group"></div>
     </div>
 
-      <script src="src/LCR.js"></script>
+    <script src="src/LCR.js"></script>
   </body>
 </html>
