feat: link creation page JS logic fix: styling fixes in the css

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -36,7 +36,7 @@
           placeholder=" Place your link here"
           class="text-box"
         />
-        <button class="create_button">Create</button>
+        <button class="create_button" onclick="create()">Create</button>
       </div>
       <div class="links-group"></div>
     </div>
