feat: profile navbar

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -21,6 +21,43 @@
           <li><a href="/">Home</a></li>
           <li><a href="/team">Team</a></li>
         </ul>
+        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png" class="user-picture" onclick="openProfileNavbar()">
+
+
+        <div class="profile-navbar">
+          <div class="profile">
+            <div class="user-info">
+              <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png">
+              <h3>Abdoalrhman</h3>
+            </div>
+            <hr>
+
+            <a href="/dashboard" class="profile-navbar-link">
+              <img src="src/images/dashboard.png">
+              <p>Dashboard</p>
+              <span>></span>
+            </a>
+
+            <a href="/try" class="profile-navbar-link">
+              <img src="src/images/profile.png">
+              <p>Create New Link</p>
+              <span>></span>
+            </a>
+
+            <a href="/profile" class="profile-navbar-link">
+              <img src="src/images/setting.png">
+              <p>Edit Profile</p>
+              <span>></span>
+            </a>
+
+            <a class="profile-navbar-link" onclick="logout()">
+              <img src="src/images/logout.png">
+              <p>Logout</p>
+              <span>></span>
+            </a>
+          </div>
+        </div>
+
       </nav>
 
       <!-- Content Section -->
