update: new logo beside shortly update: contact us illustration added

--- a/views/landing.html
+++ b/views/landing.html
@@ -17,50 +17,19 @@
   <body>
     <div class="container">
       <nav>
-        <a href="/" class="logo">SHORTLY</a>
+        <a href="/" class="logo"
+          ><img
+            src="https://media.discordapp.net/attachments/1045066964328005683/1055924594835460106/new_logo.png"
+            alt=""
+            style="width: 50px"
+          />
+          Shortly</a
+        >
         <ul id="navbar">
           <li><a href="/team">Team</a></li>
           <li id="register-navbar"><a href="/register">Register</a></li>
           <li id="login-navbar"><a href="/login">Login</a></li>
         </ul>
-
-        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png" class="user-picture" onclick="openProfileNavbar()">
-
-
-        <div class="profile-navbar">
-          <div class="profile">
-            <div class="user-info">
-              <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png">
-              <h3>Abdoalrhman</h3>
-            </div>
-            <hr>
-
-            <a href="/dashboard" class="profile-navbar-link">
-              <img src="src/images/dashboard.png">
-              <p>Dashboard</p>
-              <span>></span>
-            </a>
-
-            <a href="/try" class="profile-navbar-link">
-              <img src="src/images/profile.png">
-              <p>Create New Link</p>
-              <span>></span>
-            </a>
-
-            <a href="/profile" class="profile-navbar-link">
-              <img src="src/images/setting.png">
-              <p>Edit Profile</p>
-              <span>></span>
-            </a>
-
-            <a class="profile-navbar-link" onclick="logout()">
-              <img src="src/images/logout.png">
-              <p>Logout</p>
-              <span>></span>
-            </a>
-          </div>
-        </div>
-
       </nav>
     </div>
 
@@ -83,6 +52,7 @@
     </div>
 
     <div class="content-two">
+      <img src="https://g.top4top.io/p_25475yv561.png" class="support-img" />
       <div class="contact-us">
         <h1 id="contact-us-h1">Contact Us</h1>
         <form action="javascript:sendFeedback();" id="contact-us-form">
