update: logo added to all pages now backup: profile icon slider in landingPage

--- a/views/LCR.html
+++ b/views/LCR.html
@@ -16,7 +16,14 @@
   <body>
     <div class="container">
       <nav>
-        <a href="/" class="logo">SHORTLY</a>
+        <a href="/" class="logo"
+          ><img
+            src="https://media.discordapp.net/attachments/1045066964328005683/1055924594835460106/new_logo.png"
+            alt=""
+            style="width: 50px"
+          />
+          Shortly</a
+        >
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/team">Team</a></li>
