--- a/views/login.html
+++ b/views/login.html
@@ -17,7 +17,14 @@
   <body>
     <div class="container">
       <nav>
-        <a href="/" class="logo">SHORTLY</a>
+        <a href="/" class="logo"
+          ><img
+            src="https://media.discordapp.net/attachments/1045066964328005683/1055924594835460106/new_logo.png"
+            alt=""
+            style="width: 50px"
+          />
+          Shortly</a
+        >
         <ul>
           <li><a href="/">Home</a></li>
         </ul>
@@ -48,7 +55,9 @@
         />
         <button type="submit" class="submit-button">Sign-In</button>
         <p id="response-message"></p>
-        <div onclick="location.href='/register'" class="link-button">Dont have account yet? Sign-Up</div>
+        <div onclick="location.href='/register'" class="link-button">
+          Dont have account yet? Sign-Up
+        </div>
       </form>
 
       <script src="src/login.js"></script>
