--- a/views/reg.html
+++ b/views/reg.html
@@ -17,7 +17,14 @@
   <body>
     <div class="container">
       <nav>
-        <a href="/" class="logo">SHORTLY</a>
+        <a href="/" class="logo"
+          ><img
+            src="https://media.discordapp.net/attachments/1045066964328005683/1055924594835460106/new_logo.png"
+            alt=""
+            style="width: 50px"
+          />
+          Shortly</a
+        >
         <ul>
           <li><a href="/">Home</a></li>
         </ul>
@@ -57,7 +64,9 @@
         <input type="checkbox" required />Accept the terms.
         <button type="submit" class="submit-button">Sign-Up</button>
         <p id="response-message"></p>
-        <div onclick="location.href='/login'" class="link-button">Already have an account? Sign-In</div>
+        <div onclick="location.href='/login'" class="link-button">
+          Already have an account? Sign-In
+        </div>
       </form>
 
       <script src="src/reg.js"></script>
