--- a/views/team.html
+++ b/views/team.html
@@ -20,7 +20,14 @@
   <body>
     <div class="container">
       <nav>
-        <a href="/" class="logo">SHORTLY</a>
+        <a href="/" class="logo"
+          ><img
+            src="https://media.discordapp.net/attachments/1045066964328005683/1055924594835460106/new_logo.png"
+            alt=""
+            style="width: 50px; box-shadow: none"
+          />
+          Shortly</a
+        >
         <ul>
           <li><a href="/">Go back to Home</a></li>
         </ul>
