--- a/views/team.html
+++ b/views/team.html
@@ -43,7 +43,7 @@
           ><img
             src="https://avatars.githubusercontent.com/u/44875260?v=4"
             alt="AbdoRayan404"
-            style="width: 80%"
+            style="width: 250px"
           />
         </a>
         <p>AbdoRayan404</p>
@@ -55,7 +55,7 @@
           ><img
             src="https://avatars.githubusercontent.com/u/78859273?v=4"
             alt="AdamMindGate"
-            style="width: 70.4%"
+            style="width: 250px"
             class="img_first"
           />
         </a>
@@ -68,6 +68,7 @@
           ><img
             src="https://cdnb.artstation.com/p/users/avatars/002/102/861/large/b8727981d1f6171cd9e8b025ae075e62.jpg?1593427002"
             alt="Belal"
+            style="width: 250px"
           />
         </a>
         <p>Belal Abdelnaser</p>
